--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
         <h1>NFT Drop Coming Soon</h1>
                
-        <p>10 new Story of Dream NFTs will be released every week!!!</p>
+        <p>10 new Story of Dream NFTs will be released weekly!!!</p>
         <a href="https://discord.gg/2ctymBJD" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Dream Community！</span>
         </a>
