--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon</h1>
+        <h1>NFTs Droping Soon</h1>
                
         <p>10 new Story of Dream NFTs will be released weekly!!!</p>
         <a href="https://discord.gg/2ctymBJD" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
