--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="apple-touch-icon.png" alt="logo" />
+            <img src="favicon.ico" alt="logo" />
           </a>
         </div>
         <div class="menu">
