--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/2ctymBJD"
+            href="https://discord.gg/DDjbTn94G2"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -73,7 +73,7 @@
         <h1>NFTs Droping Soon!</h1>
                
         <p>New Story of Dream NFTs will be released weekly.</p>
-        <a href="https://discord.gg/2ctymBJD" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://discord.gg/DDjbTn94G2" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Dream Community！</span>
         </a>
       </div>
