--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
         <h1>NFTs Droping Soon!</h1>
                
-        <p>New Story of Dream NFTs will be released weekly.</p>
+        <p>Three Story of Dream NFTs will be released weekly until there are a total of thirty NFTs.</p>
         <a href="https://discord.gg/DDjbTn94G2" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Dream Community！</span>
         </a>
