--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
         <h1>NFTs Droping Soon!</h1>
                
-        <p>Three Story of Dream NFTs are released every Saturday 12 pm UTC until there are thirty NFTs total.</p>
+        <p>Three NFTs will be released every Saturday at 12 pm UTC until there are thirty NFTs total.</p>
         <a href="https://discord.gg/DDjbTn94G2" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Dream Community！</span>
         </a>
